--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
 html, body {
     margin: 0;
     padding: 0;
-}
-
-body {
     font-family: Roboto;
     font-size: 10px;
     line-height: 3.5em;
@@ -13,7 +10,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Roboto-Condensed;
+    font-family: Roboto Condensed;
 }
 
 h1 {
@@ -26,6 +23,7 @@ h2 {
     font-size: 5em;
     text-align: center;
     text-transform: uppercase;
+    line-height: 4em;
 }
 
 h3 {
@@ -43,4 +41,103 @@ h4 {
 h5 {
     font-size: 1.2em;
     line-height: 1em;
+}
+
+#nav-selector {
+    background-color: rgb(25, 33, 41);
+}
+
+#nav-selector a {
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+#header-selector {
+    background-image: url("https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-background.jpg");
+    position: 0 0;
+    height: 650px;
+    size: cover;
+    repeat: no-repeat;
+}
+/*Header Section*/
+header > h2 {
+    color: white;
+    text-shadow: #020819 8px -20px 9px;
+}
+
+header > aside {
+    font-size: 2.5em;
+
+}
+/* Section 1 */
+.dark-background {
+    background-color: rgb(25, 33, 41);
+    color: white;  
+}
+
+#general-information p {
+    font-size: 2em;
+    font-weight: 100;
+    text-align: center;
+}
+
+#general-information a {
+    background-color: rgb(67, 163, 230);
+    color: white;
+    font-family: Roboto Condensed;
+    font-size: 2em;
+    letter-spacing: 0.5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+/*Section 2*/ 
+
+.service-box{
+    font-size: 1.7em;
+    text-align: center;
+}
+
+.service-box img {
+  width: 125px;
+}
+
+/*Section 3*/
+#team .section-text {
+    font-size: 1.9em;
+    text-align: center;
+}
+
+#team .team-member {
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+
+#team img {
+    width: 250px;
+    height: 180px;
+}
+
+/*Section 4*/
+
+/*Footer*/
+footer {
+    text-align: center;
+    font-size: 1.9em;
+}
+
+.address {
+    font-size: 0.8em;
+    font-style: normal;
+}
+
+footer a {
+    color:rgb(67, 163, 230);
+    text-decoration: none;
+}
+
+footer ul {
+    list-style: none;
 }
