--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1 {
     font-size: 9em;
     text-align: center;
     text-transform: uppercase;
+    margin-top: 0;
 }
 
 h2 {
@@ -30,21 +31,25 @@ h3 {
     font-size: 4.2em;
     text-align: center;
     line-height: 1em;
+    margin: 0;
 }
 
 h4 {
     font-size: 1.5em;
     letter-spacing: 0.4px;
     line-height: 1em;
+    margin-bottom: 15px ;
 }
 
 h5 {
     font-size: 1.2em;
     line-height: 1em;
+    margin: 0 0;
 }
-
+/*Nav Section*/
 #nav-selector {
     background-color: rgb(25, 33, 41);
+    padding: 14px 0px 14px 0px;
 }
 
 #nav-selector a {
@@ -53,14 +58,26 @@ h5 {
     font-size: 2em;
 }
 
+.nav-bar-ul {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.nav-bar-ul li {
+    list-style-type: none;
+    text-align: center;
+}
+
+/*Header Section*/
+
 #header-selector {
     background-image: url("https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-background.jpg");
     position: 0 0;
     height: 650px;
     size: cover;
-    repeat: no-repeat;
+    padding-top: 50px;
 }
-/*Header Section*/
+
 header > h2 {
     color: white;
     text-shadow: #020819 8px -20px 9px;
@@ -80,6 +97,7 @@ header > aside {
     font-size: 2em;
     font-weight: 100;
     text-align: center;
+    margin: 20px;
 }
 
 #general-information a {
@@ -92,18 +110,47 @@ header > aside {
     text-decoration: none;
 }
 
-/*Section 2*/ 
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 75px 0;
+}
 
-.service-box{
+/* Section 2 */ 
+
+.service-box {
     font-size: 1.7em;
     text-align: center;
+    border: 2px solid #eee;
+    border-radius: 20px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 10px 0 #eee;
+    margin: 50px 5% 0 5%;
+    padding: 20px 20px;
+    width: 40%;
 }
 
 .service-box img {
   width: 125px;
 }
 
-/*Section 3*/
+/* Section 3 */
+
+#team {
+    padding: 75px 0;
+    margin: 0 auto;
+}
+
+#team p {
+    margin: 10px auto;
+    width: 60%;
+}
+
+#hr-tag {
+    margin: 20px auto 30px auto;
+    width: 40%;
+}
+
 #team .section-text {
     font-size: 1.9em;
     text-align: center;
@@ -114,23 +161,36 @@ header > aside {
     font-weight: 700;
 }
 
-
 #team img {
     width: 250px;
     height: 180px;
 }
 
-/*Section 4*/
+/* Section 4 */
+
+.tab-schedule {
+    margin: 0 auto 40px auto;
+    font-size: 1.5em;
+}
+
+.tab-schedule th, td {
+    border-bottom: solid 1px black;
+    padding: 5px 10px;
+    text-align: center;
+}
 
 /*Footer*/
 footer {
     text-align: center;
     font-size: 1.9em;
+    padding: 40px 100px;
+    margin-bottom: 25px;
 }
 
 .address {
     font-size: 0.8em;
     font-style: normal;
+    margin: 30px;
 }
 
 footer a {
@@ -140,4 +200,5 @@ footer a {
 
 footer ul {
     list-style: none;
+    padding: 0;
 }
